--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "draft-js": "^0.10.0",
     "file-loader": "^0.11.2",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
